# ai_projects

./: .cursorignore  PRODUCTION_AGENTS_WRITEUP.md  PRODUCTION_AGENTS_WRITEUP_EMAIL.txt  README.md
1_foundations/community_contributions/amirna2_contributions/personal-ai/: .gitignore  .uvignore  README.md  career_chatbot.py  career_chatbot_backup.py  career_chatbot_backup_full.py  main.py  promptkit.py  pyproject.toml
1_foundations/community_contributions/amirna2_contributions/personal-ai/chatbot/: __init__.py  main.py
1_foundations/community_contributions/amirna2_contributions/personal-ai/core/: __init__.py  evaluator.py  tools.py
1_foundations/community_contributions/amirna2_contributions/personal-ai/docs/: prompt-refactoring-plan.md
1_foundations/community_contributions/amirna2_contributions/personal-ai/me/: summary.txt
1_foundations/community_contributions/amirna2_contributions/personal-ai/models/: __init__.py  config.py  evaluation.py  job_match.py  job_matching.py  responses.py
1_foundations/community_contributions/amirna2_contributions/personal-ai/prompts/: chat_base.md  chat_init.md  chat_rerun.md  evaluator.md  evaluator_with_github_context.md  job_match_analysis.md
1_foundations/community_contributions/amirna2_contributions/personal-ai/services/: __init__.py  document_loader.py  notification.py  web_search.py
1_foundations/community_contributions/seung-gu/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  agent.py  pyproject.toml  requirements.txt
1_foundations/community_contributions/seung-gu/me/: summary.txt
3_crew/community_contributions/data_science_help/: README.md  pyproject.toml  search_results_2025-10-08_16-11-42.txt  search_results_2025-10-08_16-11-44.txt  search_results_2025-10-08_16-11-46.txt
3_crew/community_contributions/data_science_help/outputs/: analysis.py  app.py  cleaning.py  final_audit.json  system_design.md  viz.py
3_crew/community_contributions/data_science_help/outputs/outputs/: cleaned_data.csv  cleaned_data_ref.json  cleaning_plan.json  dataset_audit.json  visual_summary.json
3_crew/community_contributions/data_science_help/outputs/step_audits/: ui_smoke_test.json
3_crew/community_contributions/data_science_help/src/data_science_help/: crew.py  main.py  structured_outputs.py
3_crew/community_contributions/data_science_help/src/data_science_help/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/financial_advisory/: README.md  pyproject.toml
3_crew/community_contributions/financial_advisory/output/: emergency_fund_advice.md  financial_plan_report.md  insurance_advice.md  investment_advice.md  summarized_user_data.md
3_crew/community_contributions/financial_advisory/src/financial_advisory/: crew.py  main.py
3_crew/community_contributions/financial_analyser/analyser/: README.md  pyproject.toml  report.md
3_crew/community_contributions/financial_analyser/analyser/output/: chart_analysis.md
3_crew/community_contributions/software-engineering-crew/: .gitignore  README.md  pyproject.toml
3_crew/community_contributions/software-engineering-crew/knowledge/: user_preference.txt
3_crew/community_contributions/software-engineering-crew/output/: app.py  project_plan.json
3_crew/community_contributions/software-engineering-crew/output/backend/: accounts.py  portfolio.py  pricing.py  storage.py  trading.py  transactions.py  validation.py
3_crew/community_contributions/software-engineering-crew/output/tests/: test_accounts.py  test_portfolio.py  test_pricing.py  test_storage.py  test_trading.py  test_transactions.py  test_validation.py
3_crew/community_contributions/software-engineering-crew/src/software_engineering/: crew.py  main.py  schema.py
3_crew/community_contributions/storytellingbattle/: README.md  pyproject.toml
3_crew/community_contributions/storytellingbattle/output/: contestant1.md  contestant2.md  decide.md
3_crew/community_contributions/storytellingbattle/src/storytellingbattle/: crew.py  main.py
3_crew/community_contributions/sw_team/eng_team_flow_se_agents_combined/: README.md  pyproject.toml
3_crew/community_contributions/sw_team/eng_team_flow_se_agents_combined/agent_output/: Conduct Comprehensive Testing for Social Trading Features.py  Create Community News Feed Interface.py  Create RESTful API for Community Posts.py  Create RESTful API for Trader Profiles.py  Design Engagement Metrics Tracking System.py  Design Social Trading Database Schema.py  Design Social Trading Feature Database Schema.py  Develop Community Board Functionality.py  Develop Real-time Trade Replication Logic.py  Implement Leaderboard Feature.py  Implement Notification System for Updates.py  Implement Real-time Trade Replication Logic.py  Implement Trader Review and Rating System.py  Implement User Follow Functionality.py  Implement User Profile Creation.py  Set Up Privacy and Security Controls.py  business_usecase_generation_task.json  code_summarizer_op.txt  generate_engineering_task_list.json  tech_lead_review.txt
3_crew/community_contributions/travelmate/: README.md  pyproject.toml
3_crew/community_contributions/travelmate/knowledge/: user_preference.txt
3_crew/community_contributions/travelmate/output/: complete_travel_package_Zermatt,Swistzerland.md
3_crew/community_contributions/travelmate/src/travelmate/: crew.py  main.py
3_crew/debate/: pyproject.toml
3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/debate/src/debate/config/: agents.yaml
3_crew/engineering_team/: pyproject.toml
3_crew/engineering_team/example_output_new/: deploy_to_hf.py
3_crew/engineering_team/src/engineering_team/: crew.py
3_crew/engineering_team/src/engineering_team/config/: agents.yaml  api_server_design_template.md  frontend_design_template.md  tasks.yaml  ux_design.md
3_crew/financial_researcher/: pyproject.toml
3_crew/financial_researcher/output/: report.md
3_crew/stock_picker/: pyproject.toml
3_crew/stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/stock_picker/output/: decision.md  research_report.json  trending_companies.json
(+270 files in other folders)
