[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdf>=5.4.0",
    "anthropic>=0.49.0",
    "gradio>=5.22.0",
    "httpx>=0.28.1",
    "openai>=1.68.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ipython>=8.12.0,<9.0.0"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
