[project]
name = "financial_advisory"
version = "0.1.0"
description = "financial_advisory using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
financial_advisory = "financial_advisory.main:run"
run_crew = "financial_advisory.main:run"
train = "financial_advisory.main:train"
replay = "financial_advisory.main:replay"
test = "financial_advisory.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
