[project]
name = "software_engineering"
version = "0.1.0"
description = "software_engineering using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0",
    "gradio>=5.49.0",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
]

[project.scripts]
software_engineering = "software_engineering.main:run"
run_crew = "software_engineering.main:run"
train = "software_engineering.main:train"
replay = "software_engineering.main:replay"
test = "software_engineering.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["output/tests"]
