[project]
name = "storytellingbattle"
version = "0.1.0"
description = "storyTellingBattle using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
storytellingbattle = "storytellingbattle.main:run"
run_crew = "storytellingbattle.main:run"
train = "storytellingbattle.main:train"
replay = "storytellingbattle.main:replay"
test = "storytellingbattle.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
