[project]
name = "travelmate"
version = "0.1.0"
description = "travelMate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0",
    "markdown>=3.5.0",
    "weasyprint>=61.0",
    "jinja2>=3.1.0"
]

[project.scripts]
travelmate = "travelmate.main:run"
run_crew = "travelmate.main:run"
train = "travelmate.main:train"
replay = "travelmate.main:replay"
test = "travelmate.main:test"
list_agents = "travelmate.main:list_agents"
list_tasks = "travelmate.main:list_tasks"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
