[project]
name = "analyser"
version = "0.1.0"
description = "analyser using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
analyser = "analyser.main:run"
run_crew = "analyser.main:run"
train = "analyser.main:train"
replay = "analyser.main:replay"
test = "analyser.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
