[project]
name = "eng_team_flow"
version = "0.1.0"
description = "eng_team_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
]

[project.scripts]
kickoff = "eng_team_flow.main:kickoff"
run_crew = "eng_team_flow.main:kickoff"
plot = "eng_team_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
